Fix cut off excerpt in post card

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,7 +217,7 @@ footer {
   height: 18rem;
 }
 .post-card .excerpt {
-  max-height: 5rem;
+  max-height: 5.5rem;
 }
 
 .primary-tag-header {
